# stt4sg-transcribe

./: .gitignore  LICENSE  README.md  ctc_alignment.py  main.py  pipeline.py  pyproject.toml  requirements.txt  srt_formatter.py  test_all_vads.sh  transcribe.py  vad_diarization.py  venv.sh
.github/: copilot-instructions.md
vad_diarization/: __init__.py  base.py  combined.py  diarization.py  utils.py  vad.py
